bdr.BDR2.scala.error
Erreur de compilation :
BDR2:23: error: illegal start of simple expression
} 
^